stuf/src/p3/tests/t090.err
Semantic error on line 1: Invalid right operand for operator 'floor'.
Semantic error on line 2: Invalid right operand for operator 'floor'.
Semantic error on line 3: Invalid right operand for operator 'floor'.
