stuf/src/p3/tests/t090.gpl
int c = floor( "bobbing" );
double f = floor( "bobbing" );
string i = floor( "bobbing" );
